Accomplished basic communication.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -43,6 +43,50 @@ pico_add_extra_outputs(can_tx)
 find_program(OPENOCD openocd)
 find_program(PICOTOOL picotool)
 
-add_custom_target(flash ${PICOTOOL} load -f $<TARGET_FILE:can_tx> DEPENDS can_tx)
+add_custom_target(flash_tx ${PICOTOOL} load -f $<TARGET_FILE:can_tx> DEPENDS can_tx)
 
-add_custom_target(openocd_flash ${OPENOCD} -s ${OPENOCD_PATH} -f interface/cmsis-dap.cfg -f target/rp2040.cfg -c 'adapter speed 5000; program "$<TARGET_FILE:can_tx>" verify reset exit' DEPENDS can_tx)
+add_custom_target(openocd_flash_tx ${OPENOCD} -s ${OPENOCD_PATH} -f interface/cmsis-dap.cfg -f target/rp2040.cfg -c 'adapter speed 5000; program "$<TARGET_FILE:can_tx>" verify reset exit' DEPENDS can_tx)
+
+# Can Receiver
+# This is the main binary. List your C files here.
+add_executable(can_rx
+    can_rx.c
+    )
+
+
+
+pico_set_program_name(can_rx "test")
+pico_set_program_version(can_rx "0.1")
+
+# Modify the below lines to enable/disable output over UART/USB.
+# These are mutually exclusive, only set one.
+pico_enable_stdio_uart(can_rx 0)
+pico_enable_stdio_usb(can_rx 1)
+
+# Add the libraries to the build
+target_link_libraries(can_rx PRIVATE
+  pico_stdlib
+  can2040
+  pico_multicore
+  pico_async_context_freertos
+  FreeRTOS-Kernel-Heap4
+)
+
+# The CYW43 is the Wifi/Bluetooth module. If the board is set to pico_w, this
+# variable will be set and the wireless libraries added.
+if(PICO_CYW43_SUPPORTED)
+    # For led support on pico_w
+    target_link_libraries(can_rx PRIVATE
+        pico_cyw43_arch_none
+    )
+endif()
+
+# Another pico macro which generates the uf2 file in addition to the elf
+pico_add_extra_outputs(can_rx)
+
+find_program(OPENOCD openocd)
+find_program(PICOTOOL picotool)
+
+add_custom_target(flash_rx ${PICOTOOL} load -f $<TARGET_FILE:can_rx> DEPENDS can_rx)
+
+add_custom_target(openocd_flash_rx ${OPENOCD} -s ${OPENOCD_PATH} -f interface/cmsis-dap.cfg -f target/rp2040.cfg -c 'adapter speed 5000; program "$<TARGET_FILE:can_rx>" verify reset exit' DEPENDS can_rx)
